fix: move toast to bottom & add overflow-x to hidden

--- a/assets/sass/body.scss
+++ b/assets/sass/body.scss
@@ -106,6 +106,7 @@ section {
   display: block;
 }
 body {
+  overflow-x: hidden;
   line-height: 1;
 }
 ol,
